# userifc_c

./: Makefile.am  README.rst  bootstrap.sh  configure.ac  vcs_bkup.sh
app/: .gitignore  Doxyfile_c.txt  Makefile.am  README.rst  configure.ac  llvm-gcov.sh  targets.am
app/src/: userifc_c-demo.pc.in.bak
app/src/userifc_c/: demo.c  demo.h  main.c  person.c  person.h
app/tests/: tc_new.c  ts_main.c
aux/: .hgignore  Doxyfile_c.txt  Makefile.am  README.rst  configure.ac
aux/include/userifc_c/: observer.h  subject.h
aux/resources/: log4crc.xml
aux/src/: userifc_c-aux.pc.in
aux/src/userifc_c/: observer.c  subject.c
aux/tests/: tc_new.c  tc_new.h
curses/: Doxyfile_c.txt  Makefile.am  README.rst  bootstrap.sh  configure.ac  targets.am
curses/include/userifc_c/: curseshello_controller.h  curseshello_model.h  curseshello_view.h
curses/src/: userifc_c-curses.pc.in
curses/src/userifc_c/: curseshello_controller.c  curseshello_model.c  curseshello_view.c
curses/tests/: tc_viewcontroller.c  tc_viewcontroller.h  ts_main.c
gtk/: Doxyfile_c.txt  Makefile.am  README.rst  configure.ac
gtk/include/userifc_c/: gtkhello_controller.h  gtkhello_model.h  gtkhello_view.h
gtk/src/: userifc_c-gtk.pc.in
gtk/src/userifc_c/: gtkhello_controller.c  gtkhello_formview.c  gtkhello_model.c  gtkhello_view.c
gtk/tests/: tc_viewcontroller.c  ts_main.c
